--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,9 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
-* text=auto
+* text=auto charset=utf-8
+* linguist-documentation-language=ru
+
 
 ###############################################################################
 # Set default behavior for command prompt diff.
